--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ MONGO_DB_NAME=ecommerce
 PASSPORT_CLIENT_ID=Iv1.d081c37d370cc7ec
 PASSPORT_CLIENT_SECRET=f3348c1bbfdd4d12ce91eefb2774bbe1b59991a7
 PASSPORT_CALLBACK_URL=http://localhost:8080/api/sessions/githubcallback
+GMAIL_USER=yesicachuic@gmail.com
+GMAIL_PASS=rzzscqfkjiajskqv
