--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
+    "mailgen": "^2.0.27",
     "mongoose": "^7.1.0",
     "mongoose-paginate-v2": "^1.7.1",
+    "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
