integracion envio email usuario premium

--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ PASSPORT_CLIENT_SECRET=f3348c1bbfdd4d12ce91eefb2774bbe1b59991a7
 PASSPORT_CALLBACK_URL=http://localhost:8080/api/sessions/githubcallback
 GMAIL_USER=yesicachuic@gmail.com
 GMAIL_PASS=rzzscqfkjiajskqv
-ENVIRONMENT=PROD
+ENVIRONMENT=DEV
