--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node .",
-    "dev": "nodemon . "
+    "dev": "nodemon . ",
+    "test": "mocha test/**/*.test.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
     "bcrypt": "^5.1.0",
+    "chai": "^4.3.7",
     "commander": "^11.0.0",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
@@ -23,6 +25,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mailgen": "^2.0.27",
+    "mocha": "^10.2.0",
     "mongoose": "^7.1.0",
     "mongoose-paginate-v2": "^1.7.1",
     "nodemailer": "^6.9.4",
@@ -34,5 +37,8 @@
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.0",
     "winston": "^3.10.0"
+  },
+  "devDependencies": {
+    "supertest": "^6.3.3"
   }
 }
