subiendo fotos de documento y profile, verificando requerimiento de premium si subio las fotos

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=8080
 PERSISTENCE=MONGO
-MONGO_URI=mongodb://localhost:27017
-# MONGO_URI=mongodb+srv://yesicachuic:yesica@backendbasico.s7qaobr.mongodb.net
+# MONGO_URI=mongodb://localhost:27017
+MONGO_URI=mongodb+srv://yesicachuic:yesica@backendbasico.s7qaobr.mongodb.net
 MONGO_DB_NAME=ecommerce
 PASSPORT_CLIENT_ID=Iv1.d081c37d370cc7ec
 PASSPORT_CLIENT_SECRET=f3348c1bbfdd4d12ce91eefb2774bbe1b59991a7
